--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:sqlserver://DELL;databaseName=productsDB;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=vp2572002
+spring.datasource.password=
 
